---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/comment-in-if.typ
snapshot_kind: text
---
#{
  if /*(condition)*/ true { }

  if true /*(condition)*/ { }

  if true {
    /*  111
    222   */
  } // (condition)
  else { }

  if true { } else /*(condition)*/ { }
}
